--- a/index.html
+++ b/index.html
@@ -8,6 +8,28 @@
     <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
+
+    <header>
+        <nav class="nav">
+            <ul class="nav__left">
+                <li><a href="#">About</a></li>
+                <li><a href="#">Store</a></li>
+            </ul>
+
+            <ul class="nav__right">
+                <li><a href="#">Gmail</a></li>
+                <li><a href="#">Images</a></li>
+                <li><a href="#">dots</a></li>
+                <li><a href="#">profile</a></li>
+            </ul>
+        </nav>
+    </header>
+
+
+
+    <footer>
+
+    </footer>
     
 </body>
 </html>
