--- a/index.html
+++ b/index.html
@@ -5,26 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
 
     <header>
         <nav class="nav">
-            <ul class="nav__left">
+            <ul class="nav__left-align">
                 <li><a href="#">About</a></li>
                 <li><a href="#">Store</a></li>
             </ul>
-
-            <ul class="nav__right">
+            <ul class="nav__right-align">
                 <li><a href="#">Gmail</a></li>
                 <li><a href="#">Images</a></li>
-                <li><a href="#">dots</a></li>
-                <li><a href="#">profile</a></li>
+                <li>
+                    <a href="#">
+                        <span class="nav__item material-icons grey">apps</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <div class="nav__profile"></div>
+                    </a>
+                </li>
             </ul>
         </nav>
     </header>
 
+    <main>
+
+    </main>
 
 
     <footer>
