--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <nav class="nav">
             <ul class="nav__left-align">
-                <li><a href="#">About</a></li>
+                <li><a class="nav__link" href="#">About</a></li>
                 <li><a href="#">Store</a></li>
             </ul>
             <ul class="nav__right-align">
@@ -21,7 +21,7 @@
                 <li><a href="#">Images</a></li>
                 <li>
                     <a href="#">
-                        <span class="nav__item material-icons grey">apps</span>
+                        <span class="nav__apps material-icons">apps</span>
                     </a>
                 </li>
                 <li>
@@ -33,9 +33,23 @@
         </nav>
     </header>
 
-    <main>
-
+    <main class="main">
+        <div class="main__content">
+            <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="google logo">
+        </div>
     </main>
+
+    <form class="form">
+        <input type="text">
+        <div>
+            <a href="">Google Search</a>
+            <a href="">I'm Feeling Lucky</a>
+        </div>
+    </form>
+
+   
+       
+
 
 
     <footer>
