--- a/index.html
+++ b/index.html
@@ -12,49 +12,59 @@
 
     <header>
         <nav class="nav">
-            <ul class="nav__left-align">
-                <li><a class="nav__link" href="#">About</a></li>
+            <ul class="nav__left">
+                <li><a href="#">About</a></li>
                 <li><a href="#">Store</a></li>
             </ul>
-            <ul class="nav__right-align">
+            <ul class="nav__right">
                 <li><a href="#">Gmail</a></li>
                 <li><a href="#">Images</a></li>
-                <li>
-                    <a href="#">
-                        <span class="nav__apps material-icons">apps</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <div class="nav__profile"></div>
-                    </a>
-                </li>
+                <li><button href="#"><span class="nav__apps material-icons">apps</span></button></li>
+                <li><a href="#"><img class="nav__profile" src="https://avatars.githubusercontent.com/u/50708747?v=4"></a></li>
             </ul>
         </nav>
     </header>
 
-    <main class="main">
-        <div class="main__content">
-            <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="google logo">
+    <main>
+        <section class="logo">
+            <div>
+                <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="google logo">
+            </div>
+        </section>
+
+        <div class="form">
+            <div class="form__input">
+                <div class="form__icon material-icons search">search</div>
+                <input type="text">
+                <button><img class="form__icon" src="/images/Google_mic.svg"></button>
+            </div>
+            <div class="form__submit">
+                <input class="form__btn" type="submit" value="Google Search">
+                <input class="form__btn" type="submit" value="I'm Feeling Lucky">
+            </div>
         </div>
     </main>
 
-    <form class="form">
-        <input type="text">
-        <div>
-            <a href="">Google Search</a>
-            <a href="">I'm Feeling Lucky</a>
-        </div>
-    </form>
+<div class="center">
+    <footer class="footer">
+        <ul>
+            <li><a href="#">Advertising</a></li>
+            <li><a href="#">Business</a></li>
+            <li><a href="#">How Search works</a></li>
+        </ul>
 
-   
-       
-
-
-
-    <footer>
-
+        <ul>
+            <li><a href="#">Privacy</a></li>
+            <li><a href="#">Terms</a></li>
+            <li><a href="#">Settings</a></li>
+        </ul>
     </footer>
+</div>
+
+    <!-- <input class="form__btn" type="submit" value="Google Search">
+    <input class="form__btn" type="submit" value="I'm Feeling Lucky"> -->
+    <!-- <button class="form__btn">Google Search</button>
+    <button class="form__btn">I'm Feeling Lucky</button> -->
     
 </body>
 </html>
