--- a/index.html
+++ b/index.html
@@ -19,8 +19,13 @@
             <ul class="nav__right">
                 <li><a href="#">Gmail</a></li>
                 <li><a href="#">Images</a></li>
-                <li><button href="#"><span class="nav__apps material-icons">apps</span></button></li>
-                <li><a href="#"><img class="nav__profile" src="https://avatars.githubusercontent.com/u/50708747?v=4"></a></li>
+                <li>
+                    <button class="nav__btn" href="#" id="menuBtn">
+                        <span class="nav__apps material-icons">apps</span>
+                        <div class="nav__menu" id="menuList">hello world</div>
+                    </button>
+                </li>
+                <li><a href="https://github.com/JVoye"><img class="nav__profile" src="https://avatars.githubusercontent.com/u/50708747?v=4"></a></li>
             </ul>
         </nav>
     </header>
@@ -66,5 +71,6 @@
     <!-- <button class="form__btn">Google Search</button>
     <button class="form__btn">I'm Feeling Lucky</button> -->
     
+<script src="/js/app.js"></script>
 </body>
 </html>
