--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
                 <li>
                     <button class="nav__btn" href="#" id="menuBtn">
                         <span class="nav__apps material-icons">apps</span>
-                        <div class="nav__menu" id="menuList">hello world</div>
+                        <div class="nav__menu" id="menuList">
+                            <a href="#">Link 1</a>
+                            <a href="#">Link 2</a>
+                            <a href="#">Link 3</a>
+                        </div>
                     </button>
                 </li>
                 <li><a href="https://github.com/JVoye"><img class="nav__profile" src="https://avatars.githubusercontent.com/u/50708747?v=4"></a></li>
